# generate-vsix-url

./: CMakeLists.txt  README.md  run.ps1  save.json
config/: save.json
src/: control.cpp  control.ixx  main.cpp  main.ixx  util.cpp  util.ixx
